chore: 切换org.eclipse.bittorrent到com.github.atomashpolskiy.bt